<resources xmlns:tools="http://schemas.android.com/tools">
    
    <string name="app_name" tools:ignore="MissingTranslation">LanguageDemo</string>
    <string name="settting">设置_en</string>
    <string name="jump">跳转_en</string>
    <string name="test">测试_en</string>
    <string name="system">获取系统语言_en</string>
    <string name="ar">阿拉伯语测试_en</string>

    <string name="settting_en">英语_en</string>
    <string name="settting_in">印尼语_en</string>
    <string name="settting_th">泰语_en</string>
    <string name="settting_pt">葡萄牙_en</string>
    <string name="settting_tw">繁体_en</string>
    <string name="settting_ar">阿拉伯_en</string>

    <string name="ar_test1">测试阿拉伯1_en</string>

    <string name="setting_ar_textview">测试TextView_en</string>

    <string name="setting_test" tools:ignore="MissingTranslation">测试</string>
    <string name="setting_test1" tools:ignore="MissingTranslation">替换后尽量每个页面看看效果，有时候需要一些微调工作，例如使用了标签，其中用到的方向属性不会</string>
    <string name="setting_support_rtl" tools:ignore="MissingTranslation">判断是否是RTL</string>
    <string name="setting_ar_relativelayout" tools:ignore="MissingTranslation">测试RelativeLayout_ar</string>
    <string name="setting_ar_image" tools:ignore="MissingTranslation">测试图标_ar</string>
    <string name="main_bidi" tools:ignore="MissingTranslation">BidiFormatter</string>
    <string name="main_bidi_test" tools:ignore="MissingTranslation">BidiFormatter 测试</string>
    <string name="main_bidi_base_test" tools:ignore="MissingTranslation">BidiFormatter 基础测试</string>

</resources>