<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_test1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ar_test1"
        android:layout_marginTop="10dp"
        android:textDirection="locale"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_test1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/setting_ar_textview"
        android:layout_marginTop="10dp"
        android:onClick="onTextView"
        app:layout_constraintTop_toBottomOf="@id/tv_test1" />

    <Button
        android:id="@+id/btn_test2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/setting_support_rtl"
        android:layout_marginTop="10dp"
        android:onClick="onRtl"
        app:layout_constraintTop_toBottomOf="@id/btn_test1" />

    <Button
        android:id="@+id/btn_test3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/setting_ar_relativelayout"
        android:layout_marginTop="10dp"
        android:onClick="onTest3"
        app:layout_constraintTop_toBottomOf="@id/btn_test2" />

    <Button
        android:id="@+id/btn_test4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/setting_ar_image"
        android:layout_marginTop="10dp"
        android:onClick="onTest4"
        app:layout_constraintTop_toBottomOf="@id/btn_test3" />

    <Button
        android:id="@+id/btn_test5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/settting_ar"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_test4" />

</androidx.constraintlayout.widget.ConstraintLayout>