<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_test1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/settting_en"
        android:layout_marginTop="10dp"
        android:onClick="onEn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_test2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/settting_in"
        android:layout_marginTop="10dp"
        android:onClick="onIn"
        app:layout_constraintTop_toBottomOf="@id/btn_test1" />

    <Button
        android:id="@+id/btn_test3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/settting_th"
        android:layout_marginTop="10dp"
        android:onClick="onTh"
        app:layout_constraintTop_toBottomOf="@id/btn_test2" />

    <Button
        android:id="@+id/btn_test4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/settting_pt"
        android:layout_marginTop="10dp"
        android:onClick="onPt"
        app:layout_constraintTop_toBottomOf="@id/btn_test3" />

</androidx.constraintlayout.widget.ConstraintLayout>