<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settting"
        android:textAllCaps="false"
        android:onClick="onSetting"
        app:layout_constraintTop_toTopOf="parent" />
    
    <Button
        android:id="@+id/btn_jump"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jump"
        android:textAllCaps="false"
        android:onClick="onJump"
        app:layout_constraintTop_toBottomOf="@id/btn_setting" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system"
        android:textAllCaps="false"
        android:onClick="onSystem"
        app:layout_constraintTop_toBottomOf="@id/btn_jump" />
    

</androidx.constraintlayout.widget.ConstraintLayout>